# GreenInHouse

./: README.md  install_backend.sh  reinstall_backend.sh  run_backend.sh  script_backend.sh  script_install.sh
components/backend/: MANIFEST.in  README.md  setup.cfg  start.sh
components/backend/backend/: __init__.py
components/backend/backend/data/: __init__.py
components/backend/backend/data/config/: __init__.py  backendconfiguration.py
components/backend/backend/data/db/: esquema.py
components/backend/backend/data/db/exc/: __init__.py  error_registro_planta_existe.py  error_registro_planta_no_existe.py  error_registro_sensor_existe.py
components/backend/backend/data/db/results/: __init__.py  modulo_base.py  registro_planta.py  registro_sensor.py
components/backend/backend/data/db/resultsets/: __init__.py  registro_planta_set.py  registro_sensor_set.py
components/backend/backend/openapi/: spec.yml
components/backend/backend/presentation/rest/: comentarios.py  security.py
components/backend/backend/service/: __init__.py  registro_planta_service.py  registro_sensor_service.py
components/common/: setup.cfg
components/common/common/: __init__.py
components/common/common/data/: __init__.py  registro_planta.py  registro_sensor.py  tipo_sensor.py  zona_sensor.py
components/common/common/data/config/: configuration.py
dms/components/dms2223auth/: MANIFEST.in  README.md  install.sh  setup.cfg  start.sh
dms/components/dms2223auth/dms2223auth/: __init__.py
dms/components/dms2223auth/dms2223auth/openapi/: spec.yml
dms/components/dms2223auth/dms2223auth/service/: roleservices.py  userservices.py
dms/components/dms2223backend/: install.sh  setup.cfg  start.sh
dms/components/dms2223backend/dms2223backend/: __init__.py
dms/components/dms2223backend/dms2223backend/data/: __init__.py
dms/components/dms2223backend/dms2223backend/openapi/: spec.yml
dms/components/dms2223backend/dms2223backend/service/: __init__.py  comentarioservice.py  preguntaservice.py  reporteservice.py  respuestaservice.py  votoservice.py
dms/components/dms2223common/: README.md  setup.cfg
dms/components/dms2223common/dms2223common/: __init__.py
dms/components/dms2223common/dms2223common/data/: Comentario.py  Pregunta.py  Reporte.py  Respuesta.py  reportstatus.py  role.py  sentiment.py
dms/components/dms2223frontend/: MANIFEST.in  README.md  install.sh  setup.cfg  start.sh
dms/components/dms2223frontend/dms2223frontend/: __init__.py
dms/components/dms2223frontend/dms2223frontend/static/: login.css  style.css
dms/components/dms2223frontend/dms2223frontend/templates/: base.html  discussion.html  home.html  login.html  moderator.html  question.html  report.html
(+91 files in other folders)
