[metadata]
name = backend
version = attr: backend.VERSION
description = Green In House backend service
long_description = file: README.md
keywords = GreenInHouse, ubu, backend, service
license = MIT License

[options]
packages = find:
zip_safe = False
include_package_data = True
scripts =
    bin/backend
    bin/backend-create-initial
install_requires = authlib; sqlalchemy; flask; requests; pyyaml; connexion; connexion[swagger-ui]; common
