[metadata]
name = common
version = attr: common.VERSION
description = core functionalities library
long_description = file: README.md
keywords = GreenInHouse, ubu, core, library
license = MIT License

[options]
packages = find:
zip_safe = False
include_package_data = True
install_requires = appdirs; pyyaml
