[metadata]
name = dms2223auth
version = attr: dms2223auth.VERSION
description = DMS 2022-2023 authentication service
long_description = file: README.md
keywords = dms, ubu, auth, authentication, service
license = MIT License

[options]
packages = find:
zip_safe = False
include_package_data = True
scripts =
    bin/dms2223auth
    bin/dms2223auth-create-admin
install_requires = authlib; sqlalchemy; flask; pyyaml; connexion; connexion[swagger-ui]; dms2223common
