[metadata]
name = dms2223backend
version = attr: dms2223backend.VERSION
description = DMS 2022-2023 backend service
long_description = file: README.md
keywords = dms, ubu, backend, service
license = MIT License

[options]
packages = find:
zip_safe = False
include_package_data = True
scripts =
    bin/dms2223backend
    bin/dms2223backend-create-initial
install_requires = authlib; sqlalchemy; flask; requests; pyyaml; connexion; connexion[swagger-ui]; dms2223common
