[metadata]
name = dms2223common
version = attr: dms2223common.VERSION
description = DMS 2022-2023 core functionalities library
long_description = file: README.md
keywords = dms, ubu, core, library
license = MIT License

[options]
packages = find:
zip_safe = False
include_package_data = True
install_requires = appdirs; pyyaml
