[metadata]
name = dms2223frontend
version = attr: dms2223frontend.VERSION
description = DMS 2022-2023 frontend service
long_description = file: README.md
keywords = dms, ubu, frontend, service
license = MIT License

[options]
packages = find:
zip_safe = False
include_package_data = True
scripts =
    bin/dms2223frontend
install_requires = dms2223common; flask; requests
